--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "env": {
+        "commonjs": true,
         "es2021": true,
         "node": true,
         "jest": true
@@ -8,8 +9,7 @@
         "standard"
     ],
     "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
+        "ecmaVersion": 12
     },
     "rules": {
         "no-console": "off"
