--- a/package.json
+++ b/package.json
@@ -3,25 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "lint": "eslint src tests",
-    "test": "jest --coverage",
+    "start:api": "node api/src/server.js",
+    "test:api": "jest --testPathPattern=api --watch",
     "test:watch": "jest --watch"
   },
   "author": "lucas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.18.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "jest": "^27.3.1",
-    "nodemon": "^2.0.15"
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
