--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "start:api": "node api/src/server.js",
-    "test:api": "jest --testPathPattern=api --watch",
-    "test:watch": "jest --watch"
+    "test:api": "jest --testPathPattern=api --watch"
   },
   "author": "lucas",
   "license": "ISC",
